@@ -31,12 +31,63 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import solidstack.lang.Assert;
+import solidstack.script.ScriptException;
 
 
 public class Types
 {
-	// Ordered array of basic types
+	// [ Argument value's type (vertical) ][ Argument type (horizontal) ]
+	// 0: identical, <=100 assignable, <=200 convertable
+    static public final int[][] PRIMITIVE_DISTANCES =
+    {
+    	// TODO (RMB) The conversion distances > 100 seem to be in the wrong order. Redesign all.
+		{   0,   0,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1, 20 }, // boolean
+		{   0,   0,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1, 20 }, // Boolean
+		{ 107, 108,   0,   0, 102, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 20 }, // char
+		{ 107, 108,   0,   0, 102, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 20 }, // Character
+		{ 107, 108, 109, 110,   0,   0,   3,   4,   1,   2,   5,   6,   8,  10,  11,  12,  13,   9,   7, 20 }, // byte
+		{ 107, 108, 109, 110,   0,   0,   3,   4,   1,   2,   5,   6,   8,  10,  11,  12,  13,   9,   7, 20 }, // Byte
+		{ 107, 108, 109, 110, 105, 106,   0,   0,   1,   2,   5,   6,   8,  10,  11,  12,  13,   9,   7, 20 }, // short
+		{ 107, 108, 109, 110, 105, 106,   0,   0,   1,   2,   5,   6,   8,  10,  11,  12,  13,   9,   7, 20 }, // Short
+		{ 107, 108, 109, 110, 105, 106, 103, 104,   0,   0,   5,   6,   8,  10,  11,  12,  13,   9,   7, 20 }, // int
+		{ 107, 108, 109, 110, 105, 106, 103, 104,   0,   0,   5,   6,   8,  10,  11,  12,  13,   9,   7, 20 }, // Integer
+		{ 107, 108, 109, 110, 105, 106, 103, 104, 101, 102,   0,   0,   8,  10,  11,  12,  13,   9,   7, 20 }, // long
+		{ 107, 108, 109, 110, 105, 106, 103, 104, 102, 102,   0,   0,   8,  10,  11,  12,  13,   9,   7, 20 }, // Long
+		{ 107, 108, 109, 110,   9,  10,   7,   8,   5,   6,   3,   4,   0,  13,  14,  11,  12,   1,   2, 20 }, // BigInteger
+		{ 114, 115, 116, 117, 112, 113, 110, 111, 108, 109, 106, 107, 105,   0,   0,   1,   2,   3,   4, 20 }, // float
+		{ 114, 115, 116, 117, 112, 113, 110, 111, 108, 109, 106, 107, 105,   0,   0,   1,   2,   3,   4, 20 }, // Float
+		{ 114, 115, 116, 117, 112, 113, 110, 111, 108, 109, 106, 107, 105, 103, 104,   0,   0,   1,   2, 20 }, // double
+		{ 114, 115, 116, 117, 112, 113, 110, 111, 108, 109, 106, 107, 105, 103, 104,   0,   0,   1,   2, 20 }, // Double
+		{ 114, 115, 116, 117, 112, 113, 110, 111, 108, 109, 106, 107, 105, 103, 104, 101, 102,   0,   1, 20 }, // BigDecimal
+		{ 101, 102, 114, 115, 114, 115, 112, 113, 110, 111, 108, 109, 107, 105, 106, 103, 104, 102,   0, 20 }, // Number
+		{ 101, 102,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  0 }, // Object
+	};
+
+    // -1 = not, 0 = nop, 1 = easy, 2 = difficult, 3 = depends
+    static public final int[][] PRIMITIVE_ASSIGNABILITY =
+    {
+		{   0,   0,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  1 }, // boolean
+		{   0,   0,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  1 }, // Boolean
+		{  -1,  -1,   0,   0,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,  1 }, // char
+		{  -1,  -1,   0,   0,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,  1 }, // Character
+		{  -1,  -1,   1,   1,   0,   0,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,  1 }, // byte
+		{  -1,  -1,   1,   1,   0,   0,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,  1 }, // Byte
+		{  -1,  -1,   3,   3,   3,   3,   0,   0,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,  1 }, // short
+		{  -1,  -1,   3,   3,   3,   3,   0,   0,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,  1 }, // Short
+		{  -1,  -1,   3,   3,   3,   3,   3,   3,   0,   0,   1,   1,   1,   3,   3,   1,   1,   1,   1,  1 }, // int
+		{  -1,  -1,   3,   3,   3,   3,   3,   3,   0,   0,   1,   1,   1,   3,   3,   1,   1,   1,   1,  1 }, // Integer
+		{  -1,  -1,   3,   3,   3,   3,   3,   3,   3,   3,   0,   0,   1,   3,   3,   3,   3,   1,   1,  1 }, // long
+		{  -1,  -1,   3,   3,   3,   3,   3,   3,   3,   3,   0,   0,   1,   3,   3,   3,   3,   1,   1,  1 }, // Long
+		{  -1,  -1,   3,   3,   3,   3,   3,   3,   3,   3,   3,   3,   0,   3,   3,   3,   3,   1,   1,  1 }, // BigInteger
+		{  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,   0,   0,   1,   1,   1,   1,  1 }, // float
+		{  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,   0,   0,   1,   1,   1,   1,  1 }, // Float
+		{  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,   0,   0,   1,   1,  1 }, // double
+		{  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,   0,   0,   1,   1,  1 }, // Double
+		{  -1,  -1,   3,   3,   3,   3,   3,   3,   3,   3,   3,   3,   3,   3,   3,   3,   3,   0,   1,  1 }, // BigDecimal
+		{  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,   0,  1 }, // Number
+		{  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  0 }, // Object
+	};
+
 	static public final Class[] PRIMITIVES =
     {
     	boolean.class, Boolean.class, char.class, Character.class, byte.class, Byte.class, short.class, Short.class,
@@ -45,10 +96,8 @@ public class Types
 		Number.class, Object.class
 	};
 
-	// Map to index the basic types
     static public final Map< Class, Integer > TYPES;
 
-    // Fill the map
     static
     {
     	TYPES = new IdentityHashMap<Class, Integer>();
@@ -56,69 +105,10 @@ public class Types
     		TYPES.put( PRIMITIVES[ i ], i );
     }
 
-    // -1 = not possible
-	//  0 = equal types
-	//  1 = widening
-	//  3 = narrowing, depends on the value
-    static public final byte[][] CONVERSIONS =
-    {
-		{  0,  0, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,  1 }, // from: boolean
-		{  0,  0, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,  1 }, // from: Boolean
-		{ -1, -1,  0,  0,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1 }, // from: char
-		{ -1, -1,  0,  0,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1 }, // from: Character
-		{ -1, -1,  1,  1,  0,  0,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1 }, // from: byte
-		{ -1, -1,  1,  1,  0,  0,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1 }, // from: Byte
-		{ -1, -1,  3,  3,  3,  3,  0,  0,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1 }, // from: short
-		{ -1, -1,  3,  3,  3,  3,  0,  0,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1 }, // from: Short
-		{ -1, -1,  3,  3,  3,  3,  3,  3,  0,  0,  1,  1,  1,  3,  3,  1,  1,  1,  1,  1 }, // from: int
-		{ -1, -1,  3,  3,  3,  3,  3,  3,  0,  0,  1,  1,  1,  3,  3,  1,  1,  1,  1,  1 }, // from: Integer
-		{ -1, -1,  3,  3,  3,  3,  3,  3,  3,  3,  0,  0,  1,  3,  3,  3,  3,  1,  1,  1 }, // from: long
-		{ -1, -1,  3,  3,  3,  3,  3,  3,  3,  3,  0,  0,  1,  3,  3,  3,  3,  1,  1,  1 }, // from: Long
-		{ -1, -1,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  0,  3,  3,  3,  3,  1,  1,  1 }, // from: BigInteger
-		{ -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,  0,  0,  1,  1,  1,  1,  1 }, // from: float
-		{ -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,  0,  0,  1,  1,  1,  1,  1 }, // from: Float
-		{ -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,  0,  0,  1,  1,  1 }, // from: double
-		{ -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,  0,  0,  1,  1,  1 }, // from: Double
-		{ -1, -1,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  0,  1,  1 }, // from: BigDecimal
-		{ -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,  0,  1 }, // from: Number
-		{ -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,  0 }, // from: Object
-	};
+    // TODO (RMB) Better map implementation?
+    // TODO (RMB) Specificity cache?
+    static public final Map< Class, Map< Class, Integer > > distanceCache = new IdentityHashMap< Class, Map<Class,Integer> >();
 
-    static
-    {
-    	// Currently not interested in values 1 or 3
-    	for( byte[] l : CONVERSIONS )
-    		for( int j = 0; j < l.length; j++ )
-				switch( l[ j ] ) { case 1: l[ j ] = 0; break; case 3: l[ j ] = -1; }
-    }
-
-    // x2 = int, x3 = long, x4 = BI, x5 = float, x6 = double, x7 = BD
-    // 1x = convert right, 2x = convert left
-    static public final byte[][] NUMBER_MATCHING =
-    {
-		{  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, 0 }, // from: boolean
-		{  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, 0 }, // from: Boolean
-		{  0,  0,  1,  1, 12, 12, 12, 12, 12, 12, 13, 13, 14, 15, 15, 16, 16, 17,  0, 0 }, // from: char
-		{  0,  0,  1,  1, 12, 12, 12, 12, 12, 12, 13, 13, 14, 15, 15, 16, 16, 17,  0, 0 }, // from: Character
-		{  0,  0, 22, 22,  2,  2,  2,  2,  2,  2,  3,  3, 14,  5,  5,  6,  6, 17,  0, 0 }, // from: byte
-		{  0,  0, 22, 22,  2,  2,  2,  2,  2,  2,  3,  3, 14,  5,  5,  6,  6, 17,  0, 0 }, // from: Byte
-		{  0,  0, 22, 22,  2,  2,  2,  2,  2,  2,  3,  3, 14,  5,  5,  6,  6, 17,  0, 0 }, // from: short
-		{  0,  0, 22, 22,  2,  2,  2,  2,  2,  2,  3,  3, 14,  5,  5,  6,  6, 17,  0, 0 }, // from: Short
-		{  0,  0, 22, 22,  2,  2,  2,  2,  2,  2,  3,  3, 14,  5,  5,  6,  6, 17,  0, 0 }, // from: int
-		{  0,  0, 22, 22,  2,  2,  2,  2,  2,  2,  3,  3, 14,  5,  5,  6,  6, 17,  0, 0 }, // from: Integer
-		{  0,  0, 23, 23,  3,  3,  3,  3,  3,  3,  3,  3, 14,  5,  5,  6,  6, 17,  0, 0 }, // from: long
-		{  0,  0, 23, 23,  3,  3,  3,  3,  3,  3,  3,  3, 14,  5,  5,  6,  6, 17,  0, 0 }, // from: Long
-		{  0,  0, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24,  4,  5,  5,  6,  6, 17,  0, 0 }, // from: BigInteger
-		{  0,  0, 25, 25,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  6,  6, 17,  0, 0 }, // from: float
-		{  0,  0, 25, 25,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  6,  6, 17,  0, 0 }, // from: Float
-		{  0,  0, 26, 26,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6, 17,  0, 0 }, // from: double
-		{  0,  0, 26, 26,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6, 17,  0, 0 }, // from: Double
-		{  0,  0, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27,  7,  0, 0 }, // from: BigDecimal
-		{  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, 0 }, // from: Number
-		{  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, 0 }, // from: Object
-	};
-
-    // --------------------------------------------------------------------------------
 
 	static public Class[] getTypes( Object[] objects )
 	{
@@ -132,28 +122,34 @@ public class Types
 		return result;
 	}
 
-	static public Number toNumber( Object object )
+	// TODO RMB 1.7 has a strange construct here.
+	static public Number castToNumber( Object object )
 	{
 		if( object instanceof Number )
 			return (Number)object;
 		if( object instanceof Character )
-			return Integer.valueOf( ( (Character)object ).charValue() );
-		// TODO String to number?
+			return new Integer( ( (Character)object ).charValue() );
+		if( object instanceof String )
+		{
+			// TODO (RMB) Remove this ugly string conversion?
+			String c = (String)object;
+			if( c.length() == 1 )
+				return new Integer( c.charAt( 0 ) );
+		}
 		throw new ClassCastException( object.getClass().getName() + " cannot be cast to java.lang.Number" );
 	}
 
+    /**
+     * Method used for coercing an object to a boolean value,
+     * thanks to an <code>asBoolean()</code> method added on types.
+     *
+     * @param object to coerce to a boolean value
+     * @return a boolean value
+     */
 	static public boolean castToBoolean( Object object )
 	{
 		if( object == null )
 			return false;
-		if( object instanceof Boolean )
-			return (Boolean)object;
-		if( object instanceof String )
-			return ( (String)object ).length() != 0;
-		if( object instanceof Collection )
-			return !( (Collection<?>)object ).isEmpty();
-		if( object instanceof Map )
-			return !( (Map<?,?>)object ).isEmpty();
 		return true;
 		// TODO Maybe call asBoolean()
 	}
@@ -213,67 +209,173 @@ public class Types
 
 
 	/**
-	 * Returns -1 when not, 0 is nop, 1 is easy.
+	 * Returns -1 when not, 0 is easy, 1 is difficult.
 	 *
 	 * @param arg
 	 * @param type
 	 * @return
 	 */
 	// SYNC isAssignableToType
-	static public boolean assignable( Class<?> arg, Class<?> type )
+	static public int assignable( Object arg, Class type )
 	{
 		if( arg == null )
-			return !type.isPrimitive();
-		if( type.isAssignableFrom( arg ) )
-			return true;
+			return type.isPrimitive() ? -1 : 0;
+		if( type.isInstance( arg ) )
+			return 0;
+
+		Integer i = TYPES.get( type );
+		if( i != null )
+		{
+			Integer j = TYPES.get( arg.getClass() );
+			if( j != null )
+			{
+				int a = PRIMITIVE_ASSIGNABILITY[ j ][ i ];
+				if( a != 3 )
+					return a;
+				return assignable0( arg, type );
+			}
+		}
+
+        return -1;
+	}
+
+
+	static private int assignable0( Object arg, Class type )
+	{
+		if( arg instanceof BigDecimal )
+		{
+			BigDecimal bd = (BigDecimal)arg;
+			try
+			{
+				if( type == int.class )
+					bd.intValueExact(); // TODO Would be nice if the resulting value is not discarded.
+				else if( type == long.class )
+					bd.longValueExact();
+				else if( type == double.class )
+				{
+					double d = bd.doubleValue();
+					if( d == Double.NEGATIVE_INFINITY || d == Double.POSITIVE_INFINITY )
+						return -1;
+				}
+				else
+					throw new ScriptException( "Unexpected type " + type.getName() );
+				return 1;
+			}
+			catch( ArithmeticException e )
+			{
+				return -1;
+			}
+		}
+
+		throw new ScriptException( "Unexpected arg " + arg.getClass().getName() );
+	}
+
+
+	// SYNC isAssignableToType
+    // TODO (RMB) Maybe we should make String in GString identical (no conversion), return 0
+	static public int compareSpecificness( Class arg, Class type )
+	{
+		if( arg == null )
+			throw new IllegalArgumentException( "'arg' should not be null" );
+
+		int result = 2;
+		if( type == arg )
+			result = 0;
+		else if( type.isAssignableFrom( arg ) )
+			result = 1;
+		else if( arg.isAssignableFrom( type ) )
+			result = -1;
+		else
+		{
+			Integer i = TYPES.get( type );
+			if( i != null )
+			{
+				Integer j = TYPES.get( arg );
+				if( j != null )
+					result = PRIMITIVE_ASSIGNABILITY[ j ][ i ];
+			}
+		}
+
+        return result;
+	}
+
+
+	private static int calculateDistance( Class arg, Class type )
+	{
+		// arg can never be a primitive
+
+		if( arg == null )
+		{
+			int distance = 0;
+			while( type.isArray() )
+			{
+				distance++;
+				type = type.getComponentType();
+			}
+
+			if( type.isInterface() )
+				return distance + 1;
+
+			// Determine distance to Object (number of super classes)
+			Class superCls = type.getSuperclass();
+			while( superCls != null )
+			{
+				distance++;
+				superCls = superCls.getSuperclass();
+			}
+
+			return distance;
+		}
 
 		Integer i = TYPES.get( type );
 		if( i != null )
 		{
 			Integer j = TYPES.get( arg );
 			if( j != null )
-				if( CONVERSIONS[ j ][ i ] == 0 )
-					return true;
+				return PRIMITIVE_DISTANCES[ j ][ i ];
 		}
 
-        return false;
+		return 0;
 	}
+
 
 	// SYNC isAssignableToType()
 	static public Object convert( Object object, Class type )
 	{
+		if( object == null )
+			return null;
+
+		if( type.isInstance( object ) )
+			return object;
+
 		if( type.isPrimitive() )
 		{
-			if( type == boolean.class )
-				return castToBoolean( object );
-
-			if( object == null )
-				return null; // TODO Or should we throw a NullPointerException?
-
 			if( type == int.class )
-				return object instanceof Integer ? object : toNumber( object ).intValue();
+				return object instanceof Integer ? object : castToNumber( object ).intValue();
+			if( type == boolean.class )
+				return object instanceof Boolean ? object : castToBoolean( object );
 			if( type == long.class )
-				return object instanceof Long ? object : toNumber( object ).longValue();
+				return object instanceof Long ? object : castToNumber( object ).longValue();
 			if( type == double.class )
 			{
 				if( object instanceof Double )
 					return object;
-				double d = toNumber( object ).doubleValue();
+				double d = castToNumber( object ).doubleValue();
 				if( d == Double.NEGATIVE_INFINITY || d == Double.POSITIVE_INFINITY )
 					throw new IllegalArgumentException( "Value " + object + " is out of range for a double" );
 				return d;
 			}
 			if( type == byte.class )
-				return object instanceof Byte ? object : Byte.valueOf( toNumber( object ).byteValue() );
+				return object instanceof Byte ? object : castToNumber( object ).byteValue();
 			if( type == char.class )
 				return object instanceof Character ? object : castToChar( object );
 			if( type == short.class )
-				return object instanceof Short ? object : toNumber( object ).shortValue();
+				return object instanceof Short ? object : castToNumber( object ).shortValue();
 			if( type == float.class )
 			{
 				if( object instanceof Float )
 					return object;
-				float f = toNumber( object ).floatValue();
+				float f = castToNumber( object ).floatValue();
 				if( f == Float.NEGATIVE_INFINITY || f == Float.POSITIVE_INFINITY )
 					throw new IllegalArgumentException( "Value " + object + " is out of range for a float" );
 				return f;
@@ -281,9 +383,6 @@ public class Types
 
 			throw new ClassCastException( object.getClass().getName() + " cannot be cast to " + type.getName() );
         }
-
-		if( object == null || type.isInstance( object ) )
-			return object;
 
 		if( Number.class.isAssignableFrom( type ) )
 		{
@@ -296,7 +395,7 @@ public class Types
 						return new BigDecimal( (BigInteger)object );
 					if( object instanceof Float || object instanceof Double )
 						return new BigDecimal( ( (Number)object ).doubleValue() ); // valueOf() behaves differently from new()
-					return BigDecimal.valueOf( toNumber( object ).longValue() );
+					return BigDecimal.valueOf( castToNumber( object ).longValue() );
 				}
 				if( type == BigInteger.class )
 				{
@@ -304,26 +403,26 @@ public class Types
 						return ( (BigDecimal)object ).toBigInteger();
 					if( object instanceof Float || object instanceof Double )
 						return new BigDecimal( ( (Number)object ).doubleValue() ).toBigInteger(); // valueOf() behaves differently from new()
-					return BigInteger.valueOf( toNumber( object ).longValue() );
+					return BigInteger.valueOf( castToNumber( object ).longValue() );
 				}
 				if( type == Integer.class )
-					return toNumber( object ).intValue();
+					return castToNumber( object ).intValue();
 				if( type == Long.class )
-					return toNumber( object ).longValue();
+					return castToNumber( object ).longValue();
 				if( type == Double.class )
 				{
-					double d = toNumber( object ).doubleValue();
+					double d = castToNumber( object ).doubleValue();
 					if( d == Double.NEGATIVE_INFINITY || d == Double.POSITIVE_INFINITY )
 						throw new IllegalArgumentException( "Value " + object + " is out of range for a double" );
 					return d;
 				}
 				if( type == Byte.class )
-					return toNumber( object ).byteValue();
+					return castToNumber( object ).byteValue();
 				if( type == Short.class )
-					return toNumber( object ).shortValue();
+					return castToNumber( object ).shortValue();
 				if( type == Float.class )
 				{
-					float f = toNumber( object ).floatValue();
+					float f = castToNumber( object ).floatValue();
 					if( f == Float.NEGATIVE_INFINITY || f == Float.POSITIVE_INFINITY )
 						throw new IllegalArgumentException( "Value " + object + " is out of range for a float" );
 					return f;
@@ -410,7 +509,7 @@ public class Types
 
 			else if( elementType == byte.class )
 				for( Iterator iter = list.iterator(); iter.hasNext(); idx++ )
-					Array.setByte( array, idx, toNumber( iter.next() ).byteValue() );
+					Array.setByte( array, idx, castToNumber( iter.next() ).byteValue() );
 
 			else if( elementType == char.class )
 				for( Iterator iter = list.iterator(); iter.hasNext(); idx++ )
@@ -418,23 +517,23 @@ public class Types
 
 			else if( elementType == double.class )
 				for( Iterator iter = list.iterator(); iter.hasNext(); idx++ )
-					Array.setDouble( array, idx, toNumber( iter.next() ).doubleValue() );
+					Array.setDouble( array, idx, castToNumber( iter.next() ).doubleValue() );
 
 			else if( elementType == float.class )
 				for( Iterator iter = list.iterator(); iter.hasNext(); idx++ )
-					Array.setFloat( array, idx, toNumber( iter.next() ).floatValue() );
+					Array.setFloat( array, idx, castToNumber( iter.next() ).floatValue() );
 
 			else if( elementType == int.class )
 				for( Iterator iter = list.iterator(); iter.hasNext(); idx++ )
-					Array.setInt( array, idx, toNumber( iter.next() ).intValue() );
+					Array.setInt( array, idx, castToNumber( iter.next() ).intValue() );
 
 			else if( elementType == long.class )
 				for( Iterator iter = list.iterator(); iter.hasNext(); idx++ )
-					Array.setLong( array, idx, toNumber( iter.next() ).longValue() );
+					Array.setLong( array, idx, castToNumber( iter.next() ).longValue() );
 
 			else if( elementType == short.class )
 				for( Iterator iter = list.iterator(); iter.hasNext(); idx++ )
-					Array.setShort( array, idx, toNumber( iter.next() ).shortValue() );
+					Array.setShort( array, idx, castToNumber( iter.next() ).shortValue() );
 
 			else
 				for( Iterator iter = list.iterator(); iter.hasNext(); idx++ )
@@ -448,61 +547,27 @@ public class Types
 		throw new ClassCastException( object.getClass().getName() + " cannot be cast to " + type.getName() );
 	}
 
-	static public Object[] match( Object left, Object right )
+    static public int getDistance( Class arg, Class type )
 	{
-		Integer i = TYPES.get( left.getClass() );
-		if( i != null )
+		Map< Class, Integer > cache;
+		synchronized( distanceCache )
 		{
-			Integer j = TYPES.get( right.getClass() );
-			if( j != null )
-			{
-				int a = NUMBER_MATCHING[ j ][ i ];
-				switch( a )
-				{
-					case 1:
-						return new Object[] { 2, convert( left, int.class ), convert( right, int.class ) };
-					case 2:
-					case 3:
-					case 4:
-					case 5:
-					case 6:
-					case 7:
-						return new Object[] { a, left, right };
-					case 12:
-						return new Object[] { 2, left, convert( right, int.class ) };
-					case 13:
-						return new Object[] { 3, left, convert( right, long.class ) };
-					case 14:
-						return new Object[] { 4, left, convert( right, BigInteger.class ) };
-					case 15:
-						return new Object[] { 5, left, convert( right, float.class ) };
-					case 16:
-						return new Object[] { 6, left, convert( right, double.class ) };
-					case 17:
-						return new Object[] { 7, left, convert( right, BigDecimal.class ) };
-					case 22:
-						return new Object[] { 2, convert( left, int.class ), right };
-					case 23:
-						return new Object[] { 3, convert( left, long.class ), right };
-					case 24:
-						return new Object[] { 4, convert( left, BigInteger.class ), right };
-					case 25:
-						return new Object[] { 5, convert( left, float.class ), right };
-					case 26:
-						return new Object[] { 6, convert( left, double.class ), right };
-					case 27:
-						return new Object[] { 7, convert( left, BigDecimal.class ), right };
-				}
-			}
+			cache = distanceCache.get( type );
+			if( cache == null )
+				distanceCache.put( type, cache = new IdentityHashMap< Class, Integer >() );
 		}
-		throw Assert.fail(); // TODO Better exception
-	}
+		int result;
+		synchronized( cache )
+		{
+			Integer distance = cache.get( arg );
+			if( distance == null )
+			{
+				distance = calculateDistance( arg, type );
+				cache.put( arg, distance );
+			}
+			result = distance;
+		}
 
-	static public Object[] transformArguments( Class[] types, Object[] args )
-	{
-		Object[] result = new Object[ args.length ];
-		for( int i = types.length - 1; i >= 0; i-- )
-			result[ i ] = Types.convert( args[ i ], types[ i ] );
 		return result;
 	}
 }
